App Done, ready to send

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#F9A825</color>
     <color name="white">#FFFFFF</color>
     <color name="lila">#AF51C8</color>
+    <color name="grey">#7C7C7C</color>
 </resources>
